<resources>
    <string name="app_name">CustomerList</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="client_name">Nome do Cliente</string>
    <string name="placeholder_email">placeholder@email.com</string>
    <string name="add_client">Adicionar cliente</string>
    <string name="sem_clientes_cadastrados">Sem clientes cadastrados</string>
    <string name="nome">Nome</string>
    <string name="cpf">CPF</string>
    <string name="data_do_cadastro">Data do cadastro</string>
    <string name="hora_do_cadastro">Hora do cadastro</string>
    <string name="hora">Hora</string>
    <string name="data_de_nascimento">Data de nascimento</string>
    <string name="salvar">Salvar</string>
    <string name="cliente_salvo">Cliente salvo com sucesso!</string>
    <string name="close">Close</string>
    <string name="uf">UF</string>
    <string name="telefone">Telefone</string>
    <string name="phones">Phones</string>
    <string name="telefones">Telefones</string>
    <string name="sem_telefones_cadastrados">Sem telefones cadastrados</string>
    <string name="nao_cadastrada">Não cadastrada</string>
    <string name="nao_cadastrado">Não cadastrado</string>
    <string name="cadastro_de_cliente">Cadastro de Cliente</string>
    <string name="nascimento">Nascimento</string>
    <string name="adicionar_numero_de_telefone">Adicionar número de telefone</string>
</resources>