<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="customerRegistrationViewModel"
            type="com.example.customerlist.customerregistration.CustomerRegistrationViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin">

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_person_outline_24"
            android:drawablePadding="@dimen/drawable_margin"
            android:hint="@string/nome"
            android:inputType="text"
            android:text="@={customerRegistrationViewModel.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.vicmikhailau.maskededittext.MaskedEditText
            android:id="@+id/cpf_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:drawableStart="@drawable/ic_outline_description_24"
            android:drawablePadding="@dimen/drawable_margin"
            android:hint="@string/cpf"
            android:inputType="number"
            android:maxLength="14"
            android:text="@={customerRegistrationViewModel.cpf}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_edit_text"
            app:mask="###.###.###-##" />

        <EditText
            android:id="@+id/registration_date_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:clickable="false"
            android:cursorVisible="false"
            android:drawableStart="@drawable/ic_outline_calendar_today_24"
            android:drawablePadding="@dimen/drawable_margin"
            android:focusable="false"
            android:hint="@string/data_do_cadastro"
            android:onClick="@{() -> customerRegistrationViewModel.onClickRegistrationDate()}"
            android:text="@={customerRegistrationViewModel.dateOfRegistration}"
            app:layout_constraintEnd_toStartOf="@+id/registration_hour_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cpf_edit_text" />

        <EditText
            android:id="@+id/registration_hour_edit_text"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:clickable="false"
            android:cursorVisible="false"
            android:drawableStart="@drawable/ic_outline_access_time_24"
            android:drawablePadding="@dimen/drawable_margin"
            android:focusable="false"
            android:hint="@string/hora"
            android:onClick="@{() -> customerRegistrationViewModel.onClickHourOfRegistration()}"
            android:text="@{customerRegistrationViewModel.hourOfRegistration}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cpf_edit_text" />

        <EditText
            android:id="@+id/date_of_birth_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:clickable="false"
            android:cursorVisible="false"
            android:drawableStart="@drawable/ic_outline_calendar_today_24"
            android:drawablePadding="@dimen/drawable_margin"
            android:focusable="false"
            android:hint="@string/data_de_nascimento"
            android:onClick="@{() -> customerRegistrationViewModel.onClickDateOfBirth()}"
            android:text="@{customerRegistrationViewModel.dateOfBirth}"
            app:layout_constraintEnd_toStartOf="@+id/uf_spinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registration_date_edit_text" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/uf_spinner"
            android:layout_width="150dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin"
            android:entries="@array/ufs_array"
            app:layout_constraintBottom_toBottomOf="@+id/date_of_birth_edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registration_hour_edit_text"
            tools:setOnItemSelectedListener="@{customerRegistrationViewModel.spinnerClickListener}" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin"
            app:layout_constraintBottom_toTopOf="@id/save_button"
            app:layout_constraintEnd_toStartOf="@id/add_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/date_of_birth_edit_text">

            <LinearLayout
                android:id="@+id/edit_text_container_ll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/phone_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_outline_local_phone_24"
                    android:drawablePadding="@dimen/drawable_margin"
                    android:hint="@string/telefone"
                    android:inputType="phone"
                    android:maxLines="1" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <ImageButton
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/design_default_color_primary"
            android:layout_marginTop="@dimen/margin"
            android:onClick="@{() -> customerRegistrationViewModel.onAddNumber()}"
            android:src="@drawable/ic_baseline_add_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/uf_spinner" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:enabled="@{customerRegistrationViewModel.valid}"
            android:onClick="@{() -> customerRegistrationViewModel.onSave()}"
            android:text="@string/salvar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>